--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "websocket": "^1.0.28"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node servce/server.js"
+    "server": "node server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
